--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,31 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+@font-face {
+  font-family: "Abril";
+  src: url("fonts/Abril_Fatface/AbrilFatface-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Abhaya";
+  src: url("fonts/Abhaya_Libre/AbhayaLibre-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Abhaya-semi";
+  src: url("fonts/Abhaya_Libre/AbhayaLibre-SemiBold.ttf");
+}
+
+@font-face {
+  font-family: "Jua";
+  src: url("fonts/jua/Jua-Regular.ttf");
+}
+
+@font-face {
+  font-family: "CBYG";
+  src: url("fonts/Covered_By_Your_Grace/CoveredByYourGrace-Regular.ttf");
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -17,11 +42,18 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* background-color: #ffd7cc;   */
+  background-color: rgb(255, 236, 236);  
+  min-height: 100vh;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
